feat:playlist creation
