# src/api/models/CreatePlaylistRequest.ts
@@ -4,10 +4,10 @@
 /* eslint-disable */
 export type CreatePlaylistRequest = {
     name: string;
-    is_public: boolean;
+    is_public: string;
     /**
-     * UUID of the cover image File (optional)
+     * File of the cover
      */
-    cover_id?: string | null;
+    cover?: Blob | null;
 };
 
